--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,13 @@ replay_pid*
 # Added by cargo
 
 /target
+
+Cargo.lock
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
+.vscode/settings.json
