--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
 name = "Adventure-game"
-version = "0.0.3"
+version = "0.2.3"
 edition = "2021"
 
 
 [dependencies]
+serde = "1.0.158"
 termion = "2.0.1" 
 event-listener = "2.5.3" 
 round = "0.1.0"
 rand = "0.8.5"
-
+serde_json = "1.0.94" 
 futures = "0.3.26"
 futures-timer = "3.0.2"
 async-std = "1.12.0"
