--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 
 [dependencies]
-serde = "1.0.158"
+syn = "2.0.8" 
+serde = { version = "1.0.158", features = ["derive"] }
 termion = "2.0.1" 
 event-listener = "2.5.3" 
 round = "0.1.0"
